small template changes

--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -1,6 +1,6 @@
         {% for idea in rusic.ideas %}
         <!-- ENTRY -->
-        <div id="" class="entry">
+        <div class="entry">
             <h1 class="show">{{%idea.title%}}</h1>
 
             <div class="slide">
