--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -18,8 +18,9 @@
     <script src="/javascripts/less.js"></script>
     
     <!-- Scripts -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js" type="text/javascript"></script>
-    <script src="{{asset_url}}/javascripts/scripts.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
+    <script src="/assets/jquery.countdown.js"></script>
+    <script src="/javascripts/scripts.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js"></script>
     {{ content_for_header }}
@@ -62,7 +63,7 @@
             </div>
             {% endif %}
         
-            <div data-expires_at="2011-08-27T15:10:00Z" id="timer" class="hasCountdown"><div id="t7_timer"><span class="countdown-text">you have</span><div id="t7_vals"><div id="t7_d" class="t7_numbs">000<span></span></div><div id="t7_h" class="t7_numbs">00<span></span></div><div id="t7_m" class="t7_numbs">00<span></span></div><div id="t7_s" class="t7_numbs">00<span></span></div></div><span class="countdown-text"><span class="countdown-text">left to submit an idea</span></span></div></div>
+            <time id="expires-at" datetime="{{rusic.expires_at}}"></time>
             
             <div id="user-actions">
                 {% if current_user %}
