small fixes and tweaks

--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -22,7 +22,7 @@
             </div>
             
             <div class="meta">
-                <img src="{{idea.user.image_url}}" alt="avatar for {{%idea.user%}}" width="25" height="25" class="avatar" />
+                <img src="{{idea.user.image_url}}" alt="avatar for {{user.nickname}}" width="25" height="25" class="avatar" />
                 <span class="author">thought up by {{idea.user.nickname}} 3 days ago</span>
                 <div class="actions">
                     <ul>
