--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -1,4 +1,5 @@
-{% assign asset_url='http://localhost:8080' %}
+{% assign asset_url="http://localhost:8080" %}
+
 <!DOCTYPE html>
 <!--[if lt IE 7 ]> <html class="no-js ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]>    <html class="no-js ie7" lang="en"> <![endif]-->
@@ -9,12 +10,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{% if idea %}{{idea.title}} &middot; {{rusic.title}}{% else %}{{rusic.title}}{% endif %}</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="{{rusic.summary}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Less -->
-    <link rel="stylesheet/less" href="/stylesheets/less/bootstrap.less">
+    <link rel="stylesheet/less" href="/stylesheets/ideas.less">
     <script src="/javascripts/less.js"></script>
     
     <!-- Scripts -->
@@ -63,7 +63,7 @@
         
             <!-- <div data-expires_at="2011-08-27T15:10:00Z" id="timer" class="hasCountdown"><div id="t7_timer"><span class="countdown-text">you have</span><div id="t7_vals"><div id="t7_d" class="t7_numbs">000<span></span></div><div id="t7_h" class="t7_numbs">00<span></span></div><div id="t7_m" class="t7_numbs">00<span></span></div><div id="t7_s" class="t7_numbs">00<span></span></div></div><span class="countdown-text"><span class="countdown-text">left to submit an idea</span></span></div></div> -->
             
-            <time id="expires-at" datetime="{{rusic.expires_at}}">{{rusic.expires_at}}</time>
+            <!--<time id="expires-at" datetime="{{rusic.expires_at}}">{{rusic.expires_at}}</time>-->
             
             <div id="user-actions">
                 {% if current_user %}
