Remote asset URL available for go-live

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -1,5 +1,8 @@
-{% assign asset_url="http://localhost:8080" %}
-
+{% if env == "development" %}
+  {% assign asset_url="http://localhost:8080" %}
+{% else %}
+  {% assign asset_url="https://s3.amazonaws.com/rusic-ideas-theme" %}
+{% endif %}
 <!DOCTYPE html>
 <!--[if lt IE 7 ]> <html class="no-js ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]>    <html class="no-js ie7" lang="en"> <![endif]-->
