--- a/ideas/show.html.liquid
+++ b/ideas/show.html.liquid
@@ -1,5 +1,5 @@
 <ul class="breadcrumb">
-  <li><a href="{{rusic.permalink}}" title="link back to {{rusic.title}} homepage">&#8617; back to all ideas</a></li>
+  <li><a href="{{space.permalink}}" title="link back to {{space.title}} homepage">&#8617; back to all ideas</a></li>
 </ul>
 
 <div id="" class="entry">
