--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -129,7 +129,7 @@
 
         <!-- Footer -->
         <footer>
-          <p>{{ space.title }} is powered by Rusic</p>
+          <p>{{ space.title }} is powered by <a href="http://rusic.com">Rusic</a></p>
         </footer>
 
     </div>
